--- a/estilo.css
+++ b/estilo.css
@@ -24,16 +24,55 @@ a:hover {
   background: #1e1e1e;
 }
 
+.banner .logo {
+  padding: 20px;
+}
+
 .navigation-menu {
   font-weight: bold;
   width: auto;
   font-variant: small-caps;
-  text-align-last: justify;
   font-family: sans-serif;
   background: #b5b6b3;
-  padding: 10;
+  padding: 10px;
+  padding-left: 50px;
   position: relative;
   background: #000000;
+}
+
+.navigation-menu.fixed-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+}
+
+.navigation-menu .logo {
+  display: none;
+  height: 20px;
+  position: absolute;
+  left: 15px;
+  top: 6px;
+}
+
+.navigation-menu.fixed-header .logo {
+  display: block;
+}
+
+.navigation-menu > a {
+  margin-right: 20px;
+}
+
+.navigation-menu .social-links {
+  position: absolute;
+  right: 20px;
+  top: 8px;
+}
+
+.navigation-menu .social-links img {
+  height: 20px;
+  margin-left: 5px;
 }
 
 foot {
@@ -57,7 +96,6 @@ p {
   top: auto;
   padding: 1px;
   color: white;
-  /* background-color: */
 }
 
 a {
@@ -76,7 +114,6 @@ a {
   color: white;
   background-color: rgba(255, 255, 255, 0.3);
   padding: 10;
-  /* font */
 }
 
 .texto_novedades_existentes {
@@ -116,7 +153,6 @@ a {
   top: auto;
   padding: 5px;
   color: white;
-  /* background-color: ; */
   float: left;
 }
 
@@ -132,7 +168,7 @@ a {
 }
 
 .caja_tituos {
-  background-color: #7A0A12;
+  background-color: #7a0a12;
   padding: auto;
   height: auto;
   min-width: inherit;
