--- a/estilo.css
+++ b/estilo.css
@@ -83,6 +83,13 @@ a:hover {
   margin-right: -6px;
 }
 
+.content {
+  background: #003c69;
+  margin: 20px 40px;
+  padding: 40px 20px;
+  border-radius: 5px;
+}
+
 foot {
   color: white;
 }
@@ -164,7 +171,6 @@ a {
 }
 
 .caja_tituos {
-  background-color: #7a0a12;
   padding: auto;
   height: auto;
   min-width: inherit;
